--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
+  },
+  "dependencies": {
+    "vis-network": "^9.1.2"
   }
 }
