--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "vite": "^3.2.3"
   },
   "dependencies": {
+    "@types/d3": "^7.4.0",
+    "d3": "^7.7.0",
+    "d3-graphviz": "^4.4.0",
     "vis-network": "^9.1.2"
   }
 }
